[gd_scene load_steps=5 format=3 uid="uid://ra0br0vva3tr"]

[ext_resource type="Script" path="res://addons/local_assets/asset_editor/asset_editor.gd" id="1_5pxen"]
[ext_resource type="Texture2D" uid="uid://dijmxf4uhr7fi" path="res://addons/local_assets/Icon.svg" id="2_iawf4"]

[sub_resource type="Image" id="Image_iqiua"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 184, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 181, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 73, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 181, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 181, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 180, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_anfg1"]
image = SubResource("Image_iqiua")

[node name="AssetEditor" type="Control"]
custom_minimum_size = Vector2(0, 330)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -318.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5pxen")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="toggle" type="Button" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 31.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "  -  "
flat = true

[node name="Edit" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Preview" type="TextureRect" parent="VBoxContainer/Edit"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_iawf4")
expand_mode = 3
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Edit"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Path: "

[node name="Path" type="LineEdit" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
editable = false

[node name="Label2" type="Label" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Name: "

[node name="Name" type="LineEdit" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Label3" type="Label" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Image Path: "

[node name="ImagePath" type="HBoxContainer" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2

[node name="ImagePath" type="LineEdit" parent="VBoxContainer/Edit/GridContainer/ImagePath"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="OpenFile" type="Button" parent="VBoxContainer/Edit/GridContainer/ImagePath"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
size_flags_vertical = 4
icon = SubResource("ImageTexture_anfg1")
icon_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Tags:"

[node name="Tags" type="LineEdit" parent="VBoxContainer/Edit/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="BottomPannel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="VBoxContainer/BottomPannel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Discard" type="Button" parent="VBoxContainer/BottomPannel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Discard
"

[connection signal="pressed" from="VBoxContainer/Panel/toggle" to="." method="_on_toggle_pressed"]
[connection signal="text_changed" from="VBoxContainer/Edit/GridContainer/ImagePath/ImagePath" to="." method="_on_image_path_text_changed"]
[connection signal="pressed" from="VBoxContainer/Edit/GridContainer/ImagePath/OpenFile" to="." method="_on_open_file_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomPannel/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomPannel/Discard" to="." method="_on_discard_pressed"]
